update word length

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     recentlyUsed = recentlyUsed.length > 10 ? [] : recentlyUsed //keep track of recently used words so you don't sound dumb repeating yourself
 
                     C = new branch(SENTENCE)
-                    var sentence = stringOut(C);
+                    sentence = stringOut(C);
                     
                     console.log(xrayMode ? getPlainText($(sentence)) : sentence)
                     
